[build-system]
requires = ["hatchling", "hatch-vcs", "numpy"]
build-backend = "hatchling.build"

[project]
name = "pyphi"
dynamic = ["version"]
description = "A package for integrated information theory"
readme = "README.md"
license = { text = "GNU General Public License v3 or later (GPLv3+)" }
authors = [{ name = "William GP Mayner", email = "wmayner@gmail.com" }]
keywords = [
    "neuroscience",
    "causality",
    "causal-modeling",
    "causation",
    "integrated-information-theory",
    "iit",
    "integrated-information",
    "modeling",
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "Graphillion>=1.5",
    "joblib>=0.8.0",
    "more_itertools>=8.13.0",
    "numpy",
    "ordered-set>=4.0.2",
    "pandas>=2.0.0",
    "psutil>=2.1.1",
    "pyyaml>=3.13",
    "scipy>=0.13.3",
    "tblib>=1.3.2",
    "toolz>=0.9.0",
    "tqdm>=4.20.0",
]

[project.optional-dependencies]
parallel = ["ray[default]>=1.9.2"]
visualize = ["matplotlib", "networkx>=2.6.2", "plotly>=5.8.2", "seaborn"]
graphs = ["igraph>=0.9.10", "networkx>=2.6.2"]
caching = ["redis>=2.10.5"]
emd = ["pyemd>=0.3.0"]

[dependency-groups]
dev = [
    "asv",
    "build",
    "coverage",
    "hypothesis",
    "pytest<8.0.0",
    "pytest-lazy-fixture",
    "ruff",
    "sphinx",
    "sphinx-rtd-theme",
    "twine",
    "watchdog",
]

[project.urls]
documentation = "https://pyphi.readthedocs.io"
bugs = "https://github.com/wmayner/pyphi/issues"
homepage = "http://integratedinformationtheory.org/"
discussion = "https://groups.google.com/forum/#!forum/pyphi-users"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = [
    "README.md",
    "INSTALLATION.rst",
    "CACHING.rst",
    "LICENSE.md",
    "CHANGELOG.md",
    "pyphi_config.yml",
    "redis.conf",
    "pyphi/data/**",
]

[tool.hatch.build.targets.wheel]
packages = ["pyphi"]
include = ["pyphi/data/**"]

[tool.ruff]
line-length = 89
target-version = "py312"
exclude = [
    "__pycache__",
    "__pyphi_cache__",
    ".cache",
    ".git",
    ".coverage",
    "build",
    "dist",
    "docs",
    "htmlcov",
    "benchmarks",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "C90",    # mccabe complexity
    "UP",     # pyupgrade
    "T20",    # flake8-print
    "TID",    # flake8-tidy-imports
    "SIM",    # flake8-simplify
]
# Ruff doesn't have the old flake8 codes E123, E124, E126, E128, E131, W504
# These were about visual indentation which is now handled by the formatter
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 88

[tool.ruff.lint.isort]
known-first-party = ["pyphi"]
force-single-line = true
